--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
-spring.security.user.name=user
-spring.security.user.password={noop}password
+spring.datasource.url=jdbc:postgresql://localhost:5432/attendance_db
+spring.datasource.username=attendance_user
+spring.datasource.password=attendance_pass
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
